--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>My first website</h1>
-    <h3>Look mama!!! I can push to github</h3>
+    <p>Felling happy now</p>
+    <p>I am a ghost</p>
 </body>
 </html>
